test/typecheck/fail/no_function3.sail
default Order dec

$include <prelude.sail>

function test() -> unit = {
  let _ = foo_baz()
}
